--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aplikacja pogodowa</title>
     <link rel="manifest" href="./manifert.json">
+    <meta name="theme-color" content="#d0032d">
 </head>
+
 <body>
-    
+
     <header>
         <h1>Aplikacja pogodowa</h1>
     </header>
@@ -51,4 +54,5 @@
     <script src="script.js"></script>
     <script src="./sw.js"></script>
 </body>
+
 </html>
